embedded/ROS2_WS_TEST/log/build_2024-09-24_14-18-51/sub1/stderr.log
  File "C:\Users\SSAFY\Desktop\ros2_ws\install\sub1\Lib\site-packages\sub1\make_path.py", line 41
    pkg_path = 'C:\Users\SSAFY\Desktop\ros2_ws\src\sub2'
              ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \UXXXXXXXX escape

  File "C:\Users\SSAFY\Desktop\ros2_ws\install\sub1\Lib\site-packages\sub1\path_pub.py", line 48
    full_path= 'C:\Users\SSAFY\Desktop\ros2_ws\src\sub2\path'
              ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \UXXXXXXXX escape

